--- a/metroanalysis/package.json
+++ b/metroanalysis/package.json
@@ -13,7 +13,8 @@
     "firebase": "^4.10.1",
     "toastr": "^2.1.4",
     "vue": "^2.5.2",
-    "vuefire": "^1.4.5"
+    "vuefire": "^1.4.5",
+    "vuetify": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
