--- a/metroanalysis/package.json
+++ b/metroanalysis/package.json
@@ -13,6 +13,7 @@
     "firebase": "^4.10.1",
     "toastr": "^2.1.4",
     "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
     "vuetify": "^1.0.6"
   },
